// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderPlain characterization > --full 1`] = `
"skillsight  /home/u  ·  runtimes: claude-code, codex  ·  2 folders
⚠ 1 unreadable source

GLOBAL  inherited everywhere  (3 skills · 1 plugins · 2 mcp)
  - alpha-skill [shared-store owner/alpha]
  - beta-skill [user] (disabled)
  - parked-skill [user]
  - super [official@1.2.3]
  - stdio-srv [mcp stdio]
  - http-srv [mcp http] (pending/disabled)

Developer/Projects
  full
    · alpha-skill [shared-store owner/alpha]
    · beta-skill [user] (disabled)
    · parked-skill [user]
    · proj-skill [project-local]
    · super [official@1.2.3]
    · stdio-srv [mcp stdio]
    · http-srv [mcp http] (pending/disabled)
    · local-srv [mcp stdio]
  quiet
    · alpha-skill [shared-store owner/alpha]
    · beta-skill [user] (disabled)
    · parked-skill [user]
    · super [official@1.2.3]
    · stdio-srv [mcp stdio]
    · http-srv [mcp http] (pending/disabled)"
`;

exports[`renderPlain characterization > --global 1`] = `
"skillsight  /home/u  ·  runtimes: claude-code, codex  ·  2 folders
⚠ 1 unreadable source

GLOBAL  inherited everywhere  (3 skills · 1 plugins · 2 mcp)
  - alpha-skill [shared-store owner/alpha]
  - beta-skill [user] (disabled)
  - parked-skill [user]
  - super [official@1.2.3]
  - stdio-srv [mcp stdio]
  - http-srv [mcp http] (pending/disabled)"
`;

exports[`renderPlain characterization > --provenance 1`] = `
"skillsight  /home/u  ·  runtimes: claude-code, codex  ·  2 folders
⚠ 1 unreadable source

GLOBAL  inherited everywhere  (3 skills · 1 plugins · 2 mcp)
  - alpha-skill [shared-store owner/alpha]
      used by: claude-code, codex, warp
  - beta-skill [user] (disabled)
      used by: claude-code
  - parked-skill [user]
      used by: claude-code
      visibility: user-invocable-only (user)
  - super [official@1.2.3]
      supports: claude-code, codex
  - stdio-srv [mcp stdio]
      npx -y srv · env keys: API_KEY · scope: global
  - http-srv [mcp http] (pending/disabled)
      https://example.com/mcp · header keys: Authorization · scope: global

Developer/Projects
  full
    + proj-skill [project-local]
      used by: claude-code
    + local-srv [mcp stdio]
      y · scope: local
  quiet  global only"
`;

exports[`renderPlain characterization > default report 1`] = `
"skillsight  /home/u  ·  runtimes: claude-code, codex  ·  2 folders
⚠ 1 unreadable source

GLOBAL  inherited everywhere  (3 skills · 1 plugins · 2 mcp)
  - alpha-skill [shared-store owner/alpha]
  - beta-skill [user] (disabled)
  - parked-skill [user]
  - super [official@1.2.3]
  - stdio-srv [mcp stdio]
  - http-srv [mcp http] (pending/disabled)

Developer/Projects
  full
    + proj-skill [project-local]
    + local-srv [mcp stdio]
  quiet  global only"
`;
